2008-08-16   Nemethi <csaba.nemethi@t-online.de>

	* scripts/mwutil.tcl:          Added the subcommands hasattrib,
	* scripts/tablelistEdit.tcl:   unsetattrib, columnattrib,
	* scripts/tablelistMove.tcl:   hascolumnattrib, unsetcolumnattrib,
	* scripts/tablelistUtil.tcl:   rowattrib, hasrowattrib, unsetrowattrib,
	* scripts/tablelistWidget.tcl: cellattrib, hascellattrib,
	* doc/tablelistWidget.html:    unsetcellattrib, and editwintag.

	* scripts/tclIndex: Newly generated.

	* doc/tablelist.html: Minor improvement.

2008-08-01   Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Made sure that the body text widget of a
	  disabled tablelist remains covered by the "disabled" tag (fixes a
	  bug reported by Rolf Ade).

2008-06-21  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.9.2.
	* COPYRIGHT.txt:

	* scripts/repair.tcl: Updated to work with current Tablelist versions.

	* scripts/tablelistBind.tcl:   Setting up the default bindings at load
	* scripts/tablelistConfig.tcl: time; re-established the support for
	* scripts/tablelistEdit.tcl:   tile widgets as edit windows in non-
	* scripts/tablelistThemes.tcl: tile-based tablelist widgets; adapted
	* scripts/tablelistUtil.tcl:   the handling of the tile checkbutton as
	* scripts/tablelistWidget.tcl: edit window in the xpnative theme to
	* doc/tablelistThemes.html:    some changes made in tile 0.8; guarded
	  against potential widget deletion from within user-defined binding
	  scripts or update (idletasks).

	* scripts/tclIndex: Newly generated.

2008-04-27  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.9.1.
	* COPYRIGHT.txt:

2008-04-27  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:               Improved the support for cell editing with
	* scripts/tablelistEdit.tcl: a word- or char-wrapped text widget.
	* doc/tablelistTkCore.html:

2008-04-26  Csaba Nemethi <csaba.nemethi@t-online.de>
